[gd_scene load_steps=15 format=2]

[ext_resource path="res://novem___.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://art/background.png" type="Texture" id=2]
[ext_resource path="res://art/ghost2.png" type="Texture" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 60, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 60, 0, 60, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 60, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 180, 0, 60, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 60, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 60, 100 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 48
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node"]
script = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="Node2D"]
position = Vector2( 320.21, 178.651 )
scale = Vector2( 1.01191, 0.861944 )
texture = ExtResource( 2 )

[node name="Ghost" type="AnimatedSprite" parent="Node2D"]
modulate = Color( 1, 1, 1, 0.341176 )
position = Vector2( 491.077, 111.685 )
frames = SubResource( 8 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 21.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.941176, 0.784314, 0.305882, 1 )
text = "Ghosts Hate Toast"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 234.0
margin_top = 119.0
margin_right = 406.0
margin_bottom = 241.0

[node name="Play" type="Button" parent="Menu/VBoxContainer"]
margin_right = 172.0
margin_bottom = 38.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
text = "Play"
flat = true

[node name="FullScreen" type="Button" parent="Menu/VBoxContainer"]
margin_top = 42.0
margin_right = 172.0
margin_bottom = 80.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
text = "Fullscreen"
flat = true

[node name="Quit" type="Button" parent="Menu/VBoxContainer"]
margin_top = 84.0
margin_right = 172.0
margin_bottom = 122.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true

[node name="HighScore" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -54.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.831373, 0.819608, 0.541176, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
